Fix alignments in smaller screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -126,79 +126,47 @@ form {
   }
 
   .user-info {
-    background-color: #2f3c7e;
-    overflow: scroll;
-    height: 100vh;
-  }
-
-  .gen-details > h1 {
-    color: white;
-    text-align: center;
-    font-size: 2.5rem;
+    height: auto;
   }
 
   form {
-    background-color: #ffffff;
-    display: grid;
-    row-gap: 1rem;
-    border-radius: 1rem;
-    align-self: start;
-    box-shadow: 2px 5px 10px #00000090;
-    padding: 2rem;
     width: 80vw;
-    margin: 4rem auto;
   }
 
   .preview {
     width: 100vw;
-    background-color: #fbeaeb;
-    height: 100vh;
-    overflow: scroll;
+    height: auto;
   }
 
   .details input {
     width: 80vw;
-    height: 1.7rem;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    border: 2px solid #2f3c7e;
-    padding-left: 0.1rem;
+  }
+  .exp-details textarea {
+    width: 80vw;
   }
 }
 
 @media (max-width: 800px) {
+  .user-info {
+    height: auto;
+  }
   form {
-    background-color: #ffffff;
-    display: grid;
-    row-gap: 1rem;
-    border-radius: 1rem;
-    align-self: start;
-    box-shadow: 2px 5px 10px #00000090;
-    padding: 2rem;
     width: 70vw;
-    margin: 4rem auto;
   }
 
   .preview {
-    width: 100vw;
-    background-color: #fbeaeb;
-    height: 100vh;
+    height: auto;
   }
 
   .details input {
     width: 70vw;
-    height: 1.7rem;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    border: 2px solid #2f3c7e;
-    padding-left: 0.1rem;
   }
   .cv-sheet {
-    width: 15rem;
-    height: 34rem;
-    background-color: #ffffff;
-    margin: 2rem auto;
-    box-shadow: 3px 5px 10px #00000030;
-    padding: 3rem;
+    width: 70vw;
+    height: 70vh;
+  }
+
+  .exp-details textarea {
+    width: 70vw;
   }
 }
